cc_binary(
    name = "miniaudio-demo",
    srcs = [
        "src/main.c",
    ],
    linkopts = [
        "-lpthread",
        "-lm",
        "-ldl",
    ],
    deps = [
        "miniaudio",
    ],
)

cc_library(
    name = "miniaudio",
    srcs = [
        "src/miniaudio/extras/miniaudio_split/miniaudio.c",
    ],
    hdrs = [
        "src/miniaudio/extras/miniaudio_split/miniaudio.h",
    ],
    linkopts = [
        "-lpthread",
        "-lm",
        "-ldl",
    ],
)
